<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/normal_bg"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/toolbar_layout"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/white"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="0.0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_weight="1"
            android:text="@string/examtype"
            android:textColor="@color/text_color3"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:id="@+id/examtype"
            android:layout_width="0.0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dp_15"
            android:layout_weight="1"
            android:drawablePadding="@dimen/margin_5"
            android:drawableRight="@mipmap/right"
            android:gravity="right"
            android:hint="@string/pleaseselect"
            android:textColor="@color/text_color6"
            android:background="@null"
            android:textSize="@dimen/sp_16" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/white"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="0.0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_weight="1"
            android:text="@string/examair"
            android:textColor="@color/text_color3"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:id="@+id/examair"
            android:layout_width="0.0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dp_15"
            android:layout_weight="1"
            android:drawablePadding="@dimen/margin_5"
            android:drawableRight="@mipmap/right"
            android:gravity="right"
            android:hint="@string/pleaseselect"
            android:background="@null"
            android:textColor="@color/text_color6"
           android:textSize="@dimen/sp_16" />
    </LinearLayout>

    <Button
        android:id="@+id/submit_bt"
        style="@style/submitButton"
        android:layout_marginTop="@dimen/margin_20"
        android:background="@drawable/submitbutton_shape"
        android:text="@string/sure" />
</LinearLayout>
