<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">
    <include layout="@layout/toolbar_layout"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/normal_bg"/>

    <TextView
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp_16"
        android:textColor="@color/text_color3"
        android:text="@string/ewm"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
    <ImageView
        android:id="@+id/image_share"
        android:layout_marginTop="15dp"
        android:layout_width="206dp"
        android:layout_height="206dp"
        android:scaleType="fitXY"
        android:src="@mipmap/logo"/>
    </LinearLayout>

    <TextView
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp_14"
        android:textColor="@color/text_color3"
        android:text="@string/invitation_code"
        android:gravity="center"/>
    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:visibility="gone">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_18"
            android:textColor="@color/text_color3"
            android:text="@string/yours_invitation_code"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_18"
            android:textColor="@color/text_color3"
            android:text="123456"
            />
    </LinearLayout>

    <Button
        android:id="@+id/share"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="立即分享"
        android:gravity="center"
        android:layout_marginRight="@dimen/dp_15"
        android:layout_marginLeft="@dimen/dp_15"
        android:background="@drawable/purple_shape"
        android:textSize="@dimen/sp_16"
        android:textColor="@color/white"/>

</LinearLayout>
