<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/normal_bg">

    <include layout="@layout/toolbar_layout" />

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/normal_bg" />

    <LinearLayout
        android:id="@+id/account_security"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:orientation="horizontal"
        android:background="@color/white">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_weight="4"
            android:gravity="center_vertical"
            android:text="@string/mine_account"
            android:textColor="@color/text_color3"
            android:textSize="@dimen/sp_14" />

        <RelativeLayout

            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/dp_15"
            android:layout_weight="1"
            android:gravity="center_vertical|right">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@mipmap/login_icon_jt" />
        </RelativeLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/normal_bg" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:orientation="horizontal"
        android:background="@color/white"
        android:visibility="gone">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_weight="3.5"
            android:gravity="center_vertical"
            android:text="@string/mine_QQ"
            android:textColor="@color/text_color3"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:layout_marginRight="@dimen/dp_15"
            android:drawableRight="@mipmap/login_icon_jt"
            android:gravity="center_vertical|right"
            android:text="@string/mine_status"
            android:drawablePadding="@dimen/margin_5"
            android:textColor="@color/text_color3"
            android:textSize="@dimen/sp_16"
            android:id="@+id/textView2" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="@dimen/dp_15"
        android:background="@color/normal_bg" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:orientation="horizontal"
        android:background="@color/white">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_weight="3.5"
            android:gravity="center_vertical"
            android:text="@string/mine_WeiXin"
            android:textColor="@color/text_color3"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:id="@+id/binding"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:layout_marginRight="@dimen/dp_15"
            android:drawableRight="@mipmap/login_icon_jt"
            android:gravity="center_vertical|right"
            android:drawablePadding="@dimen/margin_5"
            android:text="@string/mine_status"
            android:textColor="@color/text_color3"
            android:textSize="@dimen/sp_14" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="@dimen/dp_15"
        android:background="@color/normal_bg" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:orientation="horizontal"
        android:background="@color/white"
        android:visibility="gone">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_weight="3.5"
            android:gravity="center_vertical"
            android:text="@string/mine_Sina"
            android:textColor="@color/text_color3"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:layout_marginRight="@dimen/dp_15"
            android:drawableRight="@mipmap/login_icon_jt"
            android:gravity="center_vertical|right"
            android:text="@string/mine_status"
            android:drawablePadding="@dimen/margin_5"
            android:textColor="@color/text_color3"
            android:textSize="@dimen/sp_16" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/normal_bg" />

<Button
    android:id="@+id/exit"
    android:layout_width="match_parent"
    android:layout_height="44dp"
    android:layout_marginTop="@dimen/dp_10"
    android:background="@color/white"
    android:text="退出"
    android:textColor="@color/text_color3"
    android:textSize="@dimen/sp_16"/>

</LinearLayout>


