<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:id="@+id/buy_bottom"
    android:orientation="vertical">
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/normal_bg"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            >
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:id="@+id/consultation">
                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:background="@mipmap/school_icon_advisory_default"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginLeft="@dimen/margin_5"
                android:textSize="@dimen/text_size16"
                android:textColor="@color/text_color6"
                android:text="@string/consultation"/>
            </LinearLayout>
            <View
                android:layout_width="1dp"
                android:layout_height="50dp"
                android:background="@color/normal_bg"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:id="@+id/collection">
                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:id="@+id/collect_img"
                    android:background="@mipmap/tab_collection"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginLeft="3dp"

                android:textSize="@dimen/text_size16"
                android:textColor="@color/text_color6"
                android:text="@string/collection"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <!--<TextView-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="match_parent"-->
                <!--android:text="单科购买"-->
                <!---->
                <!--android:gravity="center"-->
                <!--android:layout_weight="1"-->
                <!--android:textColor="@color/white"-->
                <!--android:textSize="@dimen/text_size16"-->
                <!--android:id="@+id/single_add_buy"-->
                <!--android:background="@color/red_bg"/>-->
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/add_buy"
            android:gravity="center"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size16"
            android:id="@+id/all_add_buy"
            android:background="@color/buy_color"/>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>
